BuildingsPy Changelog
---------------------

Version 1.5.0, xxx, 2014 -- Release 1.5
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Added regression tests for OpenModelica.
- Changed implementation of addParameters(...) to allow
  setting values of parameters that are arrays.
- Corrected bug that lead to files such as .DStore in Resources/Scripts
  to be processed as if they were scripts that run unit tests.
- Added class buildingspy.development.merger, which can be used
  to merge the Annex60 Modelica library to other Modelica libraries,
  such as the Buildings library.
- Corrected bug in copying the files for the unit tests, which
  caused libpython2.7.so not to be copied on some computers
- Added method development.include_fmu_tests that allow testing
  the export of FMUs.
- development.regressiontest now also reports when Dymola
  had to select default initial conditions,
  a model had redundant consistent initial conditions, or
  a model had type inconsistent definition equations.
- Corrected bug in simulate.Simulator that caused a syntax error
  in the Modelica .mos script when setting boolean variables.
- Changed the API of buildingspy.simulate.Simulator.
  Previously, the MODELICAPATH was used as the default
  to load the package.mo file. This was changed because the
  MODELICAPATH variable points one directory higher than the
  location of the package.mo file.
  Now, the current directory is used as the default value, which
  can be overwritten using the parameter packagePath.
- Corrected bug in buildingspy.development.regressiontest that
  only used the first word in the result mat file. This bug
  caused the unit tests to return with an error if for example
  an output file was named Obsolete.FlowMachine
- Corrected bug in buildingspy.development.Validator that
  caused the html section to be not validated if the Modelica
  file contained the </html> and <html> element on the same line.
- Added new module buildingspy.development.refactor that provides